Complete driver flow: GoingToPickup, Arrived, InProgress, RideCompleted; price adjustment

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body style="margin: 0; height: 100vh;">
     <div id="app" data-v-app='' style="height: var(--tg-viewport-stable-height); transition: height 0.5s ease-in-out;"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="/src/assets/scripts/fake-geo.js"></script>
   </body>
 </html>
